@@ -65,7 +65,7 @@ use overload (
     fallback => 1,
     '<=>'    => '_compare_overload',
     'cmp'    => '_string_compare_overload',
-    q{""}    => '_stringify',
+    q{""}    => 'stringify',
     bool     => sub {1},
     '-'      => '_subtract_overload',
     '+'      => '_add_overload',
@@ -921,7 +921,7 @@ sub leap_seconds {
     return $self->_accumulated_leap_seconds( $self->{utc_rd_days} );
 }
 
-sub _stringify {
+sub stringify {
     my $self = shift;
 
     return $self->iso8601 unless $self->{formatter};
@@ -2947,6 +2947,14 @@ This method is also available as C<< $dt->iso8601() >>, but it's not really a
 very good ISO8601 format, as it lacks a time zone.  If called as
 C<< $dt->iso8601() >> you cannot change the separator, as ISO8601 specifies
 that "T" must be used to separate them.
+
+=head2 $dt->stringify()
+
+This method returns a stringified version of the object. It is how
+stringification overloading is limited. If the object has a formatter, then
+it's C<format_datetime()> method is used to produce a string. Otherwise, this
+method calls C<< $dt->iso8601() >> to produce a string. See L<Formatters And
+Stringification> for details.
 
 =head3 $dt->is_leap_year()
 
